[gd_scene load_steps=2 format=3 uid="uid://cardnode001"]

[ext_resource type="Script" path="res://scripts/CardNode.gd" id="1_cardnode"]

[node name="CardNode" type="Panel"]
custom_minimum_size = Vector2(80, 120)
script = ExtResource("1_cardnode")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0

[node name="RankLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SuitLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "♠"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StarsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "★"
horizontal_alignment = 1
